Use echoCharacter as the default mask if none is provided explicitely